Update HardDiskStatistics.java